# my_c_project

./: .gitignore  build_c.py  pyproject.toml
src/c_code/: exercicio_funcoes  exercicio_funcoes.c  exercicio_ponteiro  exercicio_ponteiro.c  func_sub  func_sub.c  locacao-estatica-dinamica  locacao-estatica-dinamica.c  main  main.c  matrix-dinamica  matrix-dinamica.c  matrizes  matrizes.c  passagen_de_parametros_func  passagen_de_parametros_func.c  passagen_por_referencia  passagen_por_referencia.c  passando-vetores-como-parametros  passando-vetores-como-parametros.c  ponteiro_de_ponteiros01  ponteiro_de_ponteiros01.c  ponteiros-01  ponteiros-01.c  tamanho_dos_tipos  tamanho_dos_tipos.c  vetores  vetores.c  vetores_e_tipos  vetores_e_tipos.c
src/c_code/struts/: registros_de_alunos  registros_de_alunos.c
