[tool.poetry]
name = "my-c-project"
version = "0.1.0"
description = ""
authors = ["zen3t <josealvess6154@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
build_c = "build_c:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
